--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'it.chengdazhi.decentbanner:decentbanner:1.0.5'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    compile 'com.roughike:bottom-bar:2.0.1'
 }
