--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'it.chengdazhi.decentbanner:decentbanner:1.0.5'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.roughike:bottom-bar:2.0.1'
+    compile 'com.android.support:design:23.4.0'
 }
