--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         </activity>
 
         <activity android:name=".MainActivity" />
+        <activity android:name=".NewPostLoadingActivity"/>
+        <activity android:name=".NewPostResultActivity"/>
     </application>
 
 </manifest>
