nyelesein ask activity, nambahin form register, lagi ngerjain profile activity dan edit account activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".NewPostLoadingActivity"/>
         <activity android:name=".NewPostResultActivity"/>
+        <activity android:name=".AccountSettingActivity"/>
     </application>
 
 </manifest>
