--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,18 @@
                 android:value=".LandingPageActivity"/>
         </activity>
 
+        <activity android:name=".NewPostActivity"
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="adjustResize">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+
         <activity android:name=".MainActivity" />
+        <activity android:name=".NewPostLoadingActivity"/>
+        <activity android:name=".NewPostResultActivity"/>
+        <activity android:name=".AccountSettingActivity"/>
     </application>
 
 </manifest>
