--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.mikhaellopez:circularprogressbar:1.1.1'
     compile 'com.github.jakob-grabner:Circle-Progress-View:v1.2.9'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    compile 'com.android.support:cardview-v7:23.4.+'
+    compile 'com.android.support:recyclerview-v7:23.4.+'
 }
