init post detail view activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".NewPostLoadingActivity"/>
         <activity android:name=".NewPostResultActivity"/>
         <activity android:name=".AccountSettingActivity"/>
+        <activity android:name=".PostDetailViewActivity"/>
     </application>
 
 </manifest>
