--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.github.mabbas007:TagsEditText:v1.0'
     compile 'com.android.support:cardview-v7:23.4.+'
     compile 'com.android.support:recyclerview-v7:23.4.+'
+    compile 'com.android.volley:volley:1.0.0'
 }
