--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -36,4 +37,5 @@ dependencies {
     compile 'com.github.mabbas007:TagsEditText:v1.0'
     compile 'com.android.support:cardview-v7:23.4.+'
     compile 'com.android.support:recyclerview-v7:23.4.+'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
 }
