--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.+'
     compile 'com.android.support:recyclerview-v7:23.4.+'
     compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.firebaseui:firebase-ui-database:0.4.3'
 }
+
+apply plugin: 'com.google.gms.google-services'
