--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+
+repositories {
+    mavenLocal()
+    flatDir {
+        dirs 'libs'
+    }
+}
 
 android {
     compileSdkVersion 23
@@ -28,27 +34,35 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.+'
+    compile 'com.android.support:recyclerview-v7:23.4.+'
+    compile 'com.android.support:multidex:1.0.1'
+
     compile 'it.chengdazhi.decentbanner:decentbanner:1.0.5'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.roughike:bottom-bar:2.0.1'
-    compile 'com.android.support:design:23.4.0'
     compile 'com.mikhaellopez:circularprogressbar:1.1.1'
     compile 'com.github.jakob-grabner:Circle-Progress-View:v1.2.9'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.ncapdevi:frag-nav:1.0.3'
     compile 'com.github.mabbas007:TagsEditText:v1.0'
-    compile 'com.android.support:cardview-v7:23.4.+'
-    compile 'com.android.support:recyclerview-v7:23.4.+'
+
+    // Firebase
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
+    // Firebase UI
     compile 'com.firebaseui:firebase-ui-database:0.4.3'
-    compile 'com.android.support:multidex:1.0.1'
+
+    // Google
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
